syntax = "proto3";

package scraper;

import "google/protobuf/timestamp.proto";

option go_package = "pkg/proto";


message Empty {}

message FetchRequest {
  optional string request_id = 1;

  string chat_folder_link = 2;
  google.protobuf.Timestamp right_bound = 3;
  google.protobuf.Timestamp left_bound = 4;
  optional bool social = 5;
}


message Message {
  int64 id = 1;
  string text = 2;
  google.protobuf.Timestamp ts = 3;
  int64 chat_id = 4;
}

message FetchResponse {
  repeated Message messages = 1;
}

service Fetcher {
  rpc Fetch(FetchRequest) returns (FetchResponse) {}
}
